fixed release project title alignment

--- a/src/components/ReleaseProject/Releaseproject.css
+++ b/src/components/ReleaseProject/Releaseproject.css
@@ -2,7 +2,9 @@
     display: flex;
     align-items: center;
     /* background-color: red; */
-    width: 90%;
+    width: 80%;
+    margin: 10px 0;
+    /* padding: 10px; */
 }
 
 .releaseproject {
